[project]
name = "proxer-dl-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "args==0.1.0",
    "certifi==2021.5.30",
    "charset-normalizer==2.0.1",
    "clint==0.5.1",
    "idna==3.2",
    "requests==2.26.0",
    "urllib3==1.26.6,"
]
